# lf2026_sentry_autoaim_sp

./: .gitignore
pb2025_sentry_bringup/launch/: bringup.launch.py  bringup_nav.launch.py  bringup_sp.launch.py  bringup_vision.launch.py
pb2025_sentry_bringup/params/: camera_info.yaml  mid360_user_config.json  node_params.yaml
sp_vision_25/: CMakeLists.txt  README.md  check_problem_model.py  package.xml  struct.txt
sp_vision_25/Camera/Data/: 044022220091.mvdat
sp_vision_25/assets/: tiny_resnet.xml
sp_vision_25/assets/img_with_q/: 1.txt  10.txt  11.txt  12.txt  13.txt  14.txt  15.txt  16.txt  17.txt  18.txt  19.txt  2.txt  20.txt  21.txt  22.txt  23.txt  3.txt  4.txt  5.txt  6.txt  7.txt  8.txt  9.txt
sp_vision_25/calibration/: calibrate_handeye.cpp  capture_gimbal.cpp
sp_vision_25/configs/: ascento.yaml  calibration.yaml  cam1.yaml  cam2.yaml  camera.yaml  camera_info.yaml  demo.yaml  sentry.yaml  standard4.yaml  test_fixed.yaml  two_camera.yaml  uav.yaml
sp_vision_25/io/: camera.cpp  camera.hpp
sp_vision_25/io/gimbal/: gimbal.cpp
sp_vision_25/io/hikrobot/: hikrobot.cpp  hikrobot.hpp
sp_vision_25/io/ros2/: gimbal_ros.cpp  gimbal_ros.hpp  publish2gimbal.cpp  publish2gimbal.hpp  ros2.cpp  ros2.hpp  ros2_gimbal.cpp  ros2_gimbal.hpp  subscribe2gimbal.cpp  subscribe2gimbal.hpp
sp_vision_25/logs/: 2025-10-19_18-17-45.screenlog  2025-10-25_21-42-44.screenlog
sp_vision_25/records/: 2026-01-23_17-38-08.txt
sp_vision_25/src/: auto_buff_debug.cpp  sentry_bp_test.cpp  sentry_dual_cameras.cpp  sentry_dual_cameras_ros.cpp  sentry_dual_sn.cpp  sentry_dual_sn_ros.cpp
sp_vision_25/tasks/auto_aim/: aimer.cpp  aimer.hpp  shooter.cpp  shooter.hpp  solver.cpp  solver.hpp  target.cpp  tracker.cpp  yolo.cpp
sp_vision_25/tasks/auto_aim/multithread/: mt_detector.cpp  mt_detector.hpp
sp_vision_25/tasks/auto_aim/planner/: planner.cpp
sp_vision_25/tasks/auto_aim/yolos/: yolov5.cpp
sp_vision_25/tasks/auto_buff/: buff_detector.cpp  yolo11_buff.cpp  yolo11_buff.hpp
sp_vision_25/tasks/omniperception/: decider.cpp  decider.hpp
sp_vision_25/tests/: My_gimbal_test.cpp  auto_aim_camera_test.cpp  auto_aim_multiCamera_test.cpp  auto_aim_mutithread.cpp  auto_aim_test.cpp  auto_aim_test_all.cpp  auto_aim_test_all_ros.cpp  auto_buff_test.cpp  camera_test.cpp  dual_camera_test.cpp  multi_usbcamera_test.cpp
sp_vision_25/tools/: CMakeLists.txt  aim_guard.cpp  aim_guard.hpp  debug_tool.cpp  debug_tool.hpp  thread_safe_queue.hpp  viewer_tool.cpp  viewer_tool.hpp
